# VkColors

./: .gitignore  Allocator.cpp  Allocator.h  Bitmap.cpp  Bitmap.h  CMakeLists.txt  CMakeSettings.json  ColorQueue.cpp  ColorQueue.h  ColorSource.cpp  ColorSource.h  ComputeGenerator.cpp  ComputeGenerator.h  CoralGenerator.cpp  CoralGenerator.h  Core.cpp  Core.h  Generator.cpp  Generator.h  HueSource.cpp  HueSource.h  Options.cpp  Options.h  Pyramid.cpp  Pyramid.h  README.md  Renderer.cpp  Renderer.h  Semaphore.cpp  Semaphore.h  ShuffleSource.cpp  ShuffleSource.h  Staging.cpp  Staging.h  Utilities.cpp  Utilities.h  WaveGenerator.cpp  WaveGenerator.h  WaveGenerator2.cpp  WaveGenerator2.h  (+1 more)
shaders/: coral.comp  finish.comp  reduce.comp  shader.frag  shader.vert  update.comp  wave.comp
